# bbcodegen

./: .gitignore  LICENSE  README.md  pyproject.toml
src/bbcodegen/: command_line.py  config.py  ptpimg_uploader.py  screenshot.py  tmdb.py  util.py
src/bbcodegen/templates/: basic_mediainfo.j2  cast_names_thumb.j2
tests/: test_screenshot.py
