[tool.poetry]
name = "bbcodegen"
version = "0.1.0"
description = ""
authors = ["Gavin Claugus <gavin@gclaugus.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
pyperclip = "^1.8.2"
Jinja2 = "^3.1.1"

[tool.poetry.dev-dependencies]
python-language-server = "^0.36.2"
pytest = "^7.1.1"
black = {version = "^22.3.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bbgen = 'bbcodegen.command_line:main'